tests/correctness/reject/type_field_unknown.keel
struct P:
    x: int
def main(sys: System); Io:
    p = P(1)
    println(p.nonexistent)
